<resources>
    <string name="app_name">Profile</string>
    <string name="username">Name :</string>
    <string name="username_id">Avinash Kumar</string>
    <string name="Email">Email :</string>
    <string name="Email_id">Kravi3570iitj@gmail.com</string>
    <string name="Phone_number">Ph no. :</string>
    <string name="Phone_number_id">+91 9971206834</string>
    <string name="Address">Add :</string>
    <string name="Add_id">Patwatoli, Manpur, gaya, bihar - 823003</string>
    <string name="Logout">Log Out</string>
    <string name="title_activity_feedback">feedback</string>
    <string name="Subject">Subject :</string>
    <string name="Subject_id">Dudi</string>
    <string name="feedback">Enter your feedback here....</string>
</resources>