<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:textAlignment="viewStart"
    tools:context=".feedback">

    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#8F3F51B5"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/fbpagename_txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="100dp"
            android:fontFamily="@font/antic_didone"
            android:text="Feedback"
            android:textColor="#3F51B5"
            android:textSize="48sp"
            android:textStyle="bold" />


    </ScrollView>

    <ImageButton
        android:id="@+id/back_bttn"
        android:layout_width="50sp"
        android:layout_height="50sp"
        android:layout_margin="10dp"
        android:layout_marginTop="-5dp"
        android:background="#9299D5"
        android:contentDescription="back button"
        android:src="@android:drawable/ic_menu_revert"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="350dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="230dp"
        android:layout_marginEnd="24dp"
        android:background="@drawable/circular_shape"
        android:elevation="3dp"
        android:orientation="vertical"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/fbname_txt"
                        android:layout_width="144dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/username"
                        android:textAlignment="viewStart"
                        android:textColor="#3F51B5"
                        android:textSize="24sp" />

                    <EditText
                        android:id="@+id/fdnameid_txt"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:ems="10"
                        android:hint="@string/username_id"
                        android:inputType="text"
                        android:textAlignment="viewStart"
                        android:textColorHint="#610B0B0B"
                        android:textSize="20sp" />

                </LinearLayout>

                <View
                    android:id="@+id/fbborder_view_1"
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_margin="10dp"
                    android:background="#D9D9D9" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="2dp"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/fbsubject_txt"
                        android:layout_width="150dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/Subject"
                        android:textAlignment="viewStart"
                        android:textColor="#3F51B5"
                        android:textSize="24sp" />

                    <EditText
                        android:id="@+id/fdnsubjectid_txt"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:ems="10"
                        android:hint="@string/Subject_id"
                        android:inputType="text"
                        android:textAlignment="viewStart"
                        android:textColorHint="#510B0B0B"
                        android:textSize="20sp" />

                </LinearLayout>

                <View
                    android:id="@+id/fbborder_view_2"
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_margin="10dp"
                    android:background="#D9D9D9" />

                <EditText
                    android:id="@+id/fb_txt"
                    android:layout_width="match_parent"
                    android:layout_height="184dp"
                    android:layout_margin="10dp"
                    android:ems="10"

                    android:gravity="start|top"
                    android:hint="@string/feedback"
                    android:inputType="textMultiLine"
                    android:nestedScrollingEnabled="true"
                    android:singleLine="false"
                    android:textSize="20sp" />

            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

    <Button
        android:id="@+id/fbsubmit_bttn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:text="Submit"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout" />
</androidx.constraintlayout.widget.ConstraintLayout>

